--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,91 @@
 * {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 body {
- height: 100vh;
- width: 100vw;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 header {
-    width: 1000px;
-    border: 1px solid black;
-    border-radius: 8px;
-    margin: 20px auto 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px 10px;
-
+  width: 1000px;
+  border: 1px solid black;
+  border-radius: 8px;
+  margin: 20px auto 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px 10px;
 }
 
 #weather-container {
-    width: 1000px;
-    height: 500px;
-    border: 1px solid black;
-    margin: 0 auto 20px;
-    border-radius: 8px;
+  width: 1000px;
+  height: 720px;
+  border: 1px solid black;
+  margin: 0 auto 20px;
+  border-radius: 8px;
+  padding: 20px;
+}
+
+#current-conditions {
+  text-align: center;
+  height: 460px;
+  border: 1px solid black;
+  margin-bottom: 20px;
+}
+
+.top {
+  text-align: start;
+  height: 25%;
+  padding: 15px;
+}
+
+.mid {
+  height: 50%;
+  display: flex;
+  justify-content: center;
+}
+
+.mid > div {
+  width: 50%;
+}
+
+.bot {
+  height: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bot > div {
+  width: 33%;
+}
+
+#forecast {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 8px;
+}
+
+#forecast > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  border: 1px solid black;
+}
+
+footer {
+  width: 1000px;
+  border: 1px solid black;
+  border-radius: 8px;
+  margin: 20px auto 20px;
+  height: 76px;
+}
+
+.hidden {
+  display: none;
 }
