--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,12 @@ header {
   padding: 10px 20px 10px;
 }
 
+header div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #weather-container {
   width: 1000px;
   height: 720px;
@@ -88,4 +94,29 @@ footer {
 
 .hidden {
   display: none;
+}
+
+.mid img {
+  width: 430px;
+  height: 200px;
+}
+
+.mid div:last-child {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#temp {
+  font-size: 2.5rem;
+}
+
+#conditions {
+  font-size: 1.5rem;
+}
+
+#forecast img {
+  width: 70px;
+  height: 70px;
 }
