--- a/src/styles.css
+++ b/src/styles.css
@@ -8,13 +8,15 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  background-color: lightblue;
+  color: #001f3f;
 }
 
 header {
   width: 1000px;
-  border: 1px solid black;
+  border: 1px solid grey;
   border-radius: 8px;
-  margin: 20px auto 20px;
+  margin: 20px auto 0px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -29,8 +31,8 @@ header div {
 
 #weather-container {
   height: 720px;
-
   padding: 20px;
+  position: relative;
 }
 
 #current-conditions {
@@ -40,7 +42,7 @@ header div {
   margin: 0 auto 20px;
   border-radius: 8px;
   margin-bottom: 20px;
-  border: 1px solid black;
+  border: 1px solid grey;
 }
 
 .top {
@@ -72,7 +74,7 @@ header div {
 #forecast {
   width: 1000px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   column-gap: 8px;
   margin: 0 auto 20px;
 }
@@ -83,14 +85,14 @@ header div {
   justify-content: center;
   align-items: center;
   height: 200px;
-  border: 1px solid black;
+  border: 1px solid grey;
   border-radius: 8px;
   row-gap: 8px;
 }
 
 footer {
   width: 1000px;
-  border: 1px solid black;
+  border: 1px solid grey;
   border-radius: 8px;
   margin: 20px auto 20px;
   height: 76px;
@@ -127,4 +129,28 @@ footer {
 
 #error-container {
   text-align: center;
+  color: red;
+}
+
+.loader {
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+  margin: 100px auto 0;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.hidden {
+  display: none;
 }
